--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Show</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
   <h1><%= campground.title%></h1>
   <h2><%= campground.location%></h2>
-  <footer>
+  <img src="<%= campground.image %>" alt="<%= campground.title %>">
+  <p><%= campground.description%> </p>
+  <p>$ <%= campground.price %> </p>
+  <p>
     <a href="/campgrounds/<%=campground._id%>/editCampground">Edit Campground</a>
+  </p>
+  <p>
+    <form action='/campgrounds/<%=campground._id%>?_method=DELETE' method="POST">
+      <button>Delete</button>
+    </form>
+  </p>
+  <div>
     <a href="/campgrounds">Back to all campgrounds</a>
-  </footer>
-</body>
-</html>
+  </div>
+  
