--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Camp</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
   <H1>Home! Yelp Camp</H1>
-</body>
-</html>
