--- a/views/campgrounds/addCampground.ejs
+++ b/views/campgrounds/addCampground.ejs
@@ -2,29 +2,34 @@
   <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-      <form action='/campgrounds' method='POST'>
+      <form action='/campgrounds' method='POST' novalidate class="validated-form">
         <div class="mb-3">
           <label class="form-label" for="title">Title</label>
-          <input class="form-control" type="text" id="title" name="campground[title]">
+          <input class="form-control" type="text" id="title" name="campground[title]" required>
+          <div class="invalid-feedback">Add camp title</div>
         </div>
         <div class="mb-3">
           <label class="form-label" for="location">Location</label>
-          <input class="form-control" type="text" id="location" name="campground[location]">
+          <input class="form-control" type="text" id="location" name="campground[location]" required>
+          <div class="invalid-feedback">Add a city and state</div>
         </div>
         <div class="mb-3">
           <label class="form-label" for="image">Image Url</label>
-          <input class="form-control" type="text" id="image" name="campground[image]">
+          <input class="form-control" type="text" id="image" name="campground[image]" required>
+          <div class="invalid-feedback">Add a Image URL</div>
         </div>
         <div class="mb-3">
           <label class="form-label" for="price">Price</label>
           <div class="input-group">
             <span class="input-group-text" id="price-label">$</span>
-            <input type="number" class="form-control" placeholder="0.00" name="campground[price]" aria-describedby="price-label">
+            <input type="text" class="form-control" placeholder="0.00" name="campground[price]" aria-describedby="price-label" required>
+            <div class="invalid-feedback">Add Price</div>
           </div>
         </div>
         <div class="mb-3">
           <label class="form-label" for="description">Description</label>
-          <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+          <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+          <div class="invalid-feedback">Add camp description</div>
         </div>
         <div class="mb-3">
           <button class="btn btn-success">Add Campground</button>
@@ -35,3 +40,4 @@
       </div>
     </div>
   </div>
+
