--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,18 +1,26 @@
 <% layout('layouts/boilerplate')%>
-  <h1><%= campground.title%></h1>
-  <h2><%= campground.location%></h2>
-  <img src="<%= campground.image %>" alt="<%= campground.title %>">
-  <p><%= campground.description%> </p>
-  <p>$ <%= campground.price %> </p>
-  <p>
-    <a href="/campgrounds/<%=campground._id%>/editCampground">Edit Campground</a>
-  </p>
-  <p>
-    <form action='/campgrounds/<%=campground._id%>?_method=DELETE' method="POST">
-      <button>Delete</button>
-    </form>
-  </p>
-  <div>
-    <a href="/campgrounds">Back to all campgrounds</a>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <div class="card mb-3">
+        <img src="<%= campground.image%>" class="card-img-top" alt="<%= campground.title%>">
+        <div class="card-body">
+          <h5 class="card-title"><%= campground.title%></h5>
+          <p class="card-text"><%= campground.description%></p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item text-muted"><%= campground.location%></li>
+          <li class="list-group-item">$<%= campground.price%>/night</li>
+        </ul>
+        <div class="card-body">
+          <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/editCampground">Edit</a>
+          <form class="d-inline" action='/campgrounds/<%=campground._id%>?_method=DELETE' method="POST">
+            <button class="btn btn-danger">Delete</button>
+          </form>
+        </div>
+      </div>
+      <div class="card-footer my-3">
+        <a class="card-link text-muted" href="/campgrounds">Back to all campgrounds</a>
+      </div>
+    </div>
   </div>
   
