--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,6 +21,18 @@
       <div class="card-footer my-3">
         <a class="card-link text-muted" href="/campgrounds">Back to all campgrounds</a>
       </div>
+      <h2>Leave a Review</h2>
+      <form action="" class="mb-3">
+        <div class="mb-3">
+          <label class="form=label" for='rating'>Rating</label>
+          <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="body">Review:</label>
+          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+        </div>
+        <button class="btn btn-success">add review</button>
+      </form>
     </div>
   </div>
   
