--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,14 +22,15 @@
         <a class="card-link text-muted" href="/campgrounds">Back to all campgrounds</a>
       </div>
       <h2>Leave a Review</h2>
-      <form action="" class="mb-3">
+      <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
         <div class="mb-3">
           <label class="form=label" for='rating'>Rating</label>
           <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
         </div>
         <div class="mb-3">
           <label class="form-label" for="body">Review:</label>
-          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+          <div class="invalid-feedback">Add camp review</div>
         </div>
         <button class="btn btn-success">add review</button>
       </form>
